plugins {
    id 'java'
    id 'org.jetbrains.intellij' version '0.6.5'
}

java {
    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11
}

group 'name.admitriev.jhelper'
version '0.19'

repositories {
    mavenCentral()
}


sourceSets {
    main.java.srcDirs = ['src']
    main.resources.srcDirs = ['resources']
}

runIde {
    jvmArgs '--add-exports', 'java.base/jdk.internal.vm=ALL-UNNAMED'
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
    compile fileTree(dir: 'lib', include: 'chelper.jar')
}

// See https://github.com/JetBrains/gradle-intellij-plugin/
intellij {
    version '2021.1.2'
    updateSinceUntilBuild false
    type 'CL'
    setPlugins('com.intellij.clion', 'com.intellij.cidr.lang')
}
